# PicoMax

./: .gitignore  README.md
glitcher/: CMakeLists.txt  controller.py  glitcher.c  glitcher.h
hardware/: README.md
hardware/picomax/: Vglitch.kicad_sym  fp-lib-table  picomax.kicad_prl  picomax.kicad_pro  picomax.kicad_sch  sym-lib-table
hardware/picomax/MAX4619CPE/: DIP794W47P254L1943H457Q16.kicad_mod  MAX4619CPE_.kicad_sym
hardware/picomax/PIC16LF1936-I_SS/: PIC16LF1936-I_SS.kicad_sym  PIC16LF1936-I_SS.step  SOP65P780X200-28N.kicad_mod
hardware/picomax/SC0915/: MODULE_SC0915.kicad_mod  SC0915.kicad_sym
img/: colors.txt
jupyter/: characterization.ipynb  magic_fi_catacterization.ipynb  plotter.ipynb
jupyter/.ipynb_checkpoints/: magic_fi_catacterization-checkpoint.ipynb
report/: bibliography.bib  report.acn  report.acr  report.alg  report.aux  report.bbl  report.blg  report.glg  report.glo  report.gls  report.ist  report.out  report.tex
report/_minted-report/: 2FD0449553198D2A1C66E4EDEB580C60198AFF68372D230DA63714DE2B6EE3B5.pygtex  C9A588BB4CFF154F7E97F4A66A04AEAD198AFF68372D230DA63714DE2B6EE3B5.pygtex
src/: CMakeLists.txt  basicserial_loop.py  controller.py  glitch.c  glitch.h  glitch.pio  glitcher.c  glitcher.h  icsp_programmer.py  icsp_programmer_new.py  picomax.c  picomax.h  pins.h  programmer.pio
src/.ipynb_checkpoints/: icsp_programmer-checkpoint.py
src/icsp/: CMakeLists.txt  ICSP.py  __init__.py  devices.py  icsp.c  icsp.h  icsp.pio  icsp_imperative.pio  icsp_load.pio  icsp_read.pio
src/pic_programmer/: datastructures.h  icsp.c  icsp.h  icsp_enter.pio  icsp_imperative.pio  icsp_load.pio  icsp_read.pio  pic_enter_icsp.pio  pic_key.pio  pic_programmer.c  pic_read.pio  pic_send_6bits.pio
target_src/: README.md
target_src/pic16_c_template_1.X/: main.c  pic16_c_template_1.mc3
target_src/pic16_c_template_1.X/mcc_generated_files/: device_config.c  device_config.h  i2c_slave.c  i2c_slave.h  interrupt_manager.c  interrupt_manager.h  mcc.c  mcc.h  memory.c  memory.h  pin_manager.c  pin_manager.h
target_src/pic16_c_template_1.X/nbproject/: Makefile-HT_PIC16F1936.mk  Makefile-genesis.properties  Makefile-impl.mk  Makefile-variables.mk  configurations.xml  project.xml
target_src/pic16_c_template_1.X/nbproject/private/: configurations.xml  private.xml
